--- a/app/views/admin/doorkeeper.phtml
+++ b/app/views/admin/doorkeeper.phtml
@@ -26,6 +26,13 @@
                     DoorKeeper enabled
                 </label>
             </div>
+            <div class="form_field fullsize checkbox use_header_footer" data-form-field="useHeaderFooter">
+                <label>
+                    <input type="checkbox" data-ng-init="options.useHeaderFooter=''" data-ng-model="options.useHeaderFooter" data-ng-true-value="'1'" data-ng-false-value="''" title="Use theme header and footer"/>
+                    Use theme header and footer
+                </label>
+            </div>
+
 
 	        <!-- chayka: fields -->
             <div class="buttons">
